
Version (SVN)
-------------

JDO:   Fixed bug CASTOR-1403 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed documentation for 'sortedset' collection type in the JDO mapping section.
       Details: http://jira.codehaus.org/browse/CASTOR-1403
       (Werner - 20060422)

All:   Fixed bug CASTOR-1380 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Migrated Castor repository from CVS to SVN.
       Details: http://jira.codehaus.org/browse/CASTOR-1380
       (Ralf - 20060416)

All:   Fixed bug CASTOR-1401 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Added project specific settings for use with Eclipse.
       Details: http://jira.codehaus.org/browse/CASTOR-1401
       (Ralf - 20060414)

All:   Fixed bug CASTOR-1395 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 268 unused imports.
       Details: http://jira.codehaus.org/browse/CASTOR-1395
       (Ralf - 20060414)

JDO:   Fixed bug CASTOR-1388 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactor ClassMolder.update() to complete transfer to strategy pattern.
       Details: http://jira.codehaus.org/browse/CASTOR-1388
       (Werner - 20060413)

All:   Fixed bug CASTOR-1394 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 104 instance of instance access to static fields/methods.
       Details: http://jira.codehaus.org/browse/CASTOR-1394
       (Ralf - 20060413)

All:   Fixed bug CASTOR-1393 using contribution from Henk van Voorthujsen [voorth@xs4all.nl]
       Fixed compiler warnings: 103 unnecessary casts.
       Details: http://jira.codehaus.org/browse/CASTOR-1393
       (Ralf - 20060413)

All:   Fixed bug CASTOR-1391 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Upgrad checkstyle configuration from version 3.5 to 4.1.0beta3.
       Details: http://jira.codehaus.org/browse/CASTOR-1391